fix: 🐛 Add style to img tag instile of image-wrap class

--- a/wp-template/style.css
+++ b/wp-template/style.css
@@ -2900,6 +2900,10 @@ div.image-wrap:hover {
 	border: 1px solid #70401e;
 }
 
+div.image-wrap img {
+	border: none;
+}
+
 figure.my-thumbnail .blocks-gallery-grid .blocks-gallery-item figure img[src*=transparent] 
 {
 	border:none;
